tests/baselines/reference/customEventDetail.errors.txt
==== tests/cases/compiler/customEventDetail.ts (1 errors) ====
    var x: CustomEvent;
           ~~~~~~~~~~~
!!! customEventDetail.ts(1,8): error TS2095: Cannot find name 'CustomEvent'.
    
    // valid since detail is any
    x.initCustomEvent('hello', true, true, { id: 12, name: 'hello' });
    var y = x.detail.name;